objects/CRMforNonProfit__NNOSettings__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__AccountTransactions__c</fullName>
        <label>Typy transakcí sčítaných na firmu</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>peněžní dar</fullName>
                </value>
                <value>
                    <fullName>nepeněžní dar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Account_Num_Blacklist__c</fullName>
        <description>Seznam ignorovaných čísel účtů, oddělených čárkou</description>
        <label>Account Num. Blacklist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Account_Number__c</fullName>
        <description>ČSAS číslo účtu pro načítání výpisů přes Databanking 24</description>
        <label>ČSAS Číslo účtu (nepouzivat)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Auth_Code_Link__c</fullName>
        <formula>'https://bezpecnost.csas.cz/api/psd2/fl/oidc/v1/auth?redirect_uri=' +  CRMforNonProfit__Redirect_URI_From_CMDT__c  + '&amp;client_id=' +  CRMforNonProfit__Client_Id_From_CMDT__c  + '&amp;response_type=code&amp;access_type=offline&amp;scope=siblings.accounts'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAS Auth Code Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Datum_Posledniho_Vypisu__c</fullName>
        <description>(nepouzivat) ČSAS Datum posledního načtení výpisu přes Databanking 24</description>
        <label>ČSAS Datum posledního načteného výpisu</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_Password__c</fullName>
        <description>Heslo pro přístup k ČSAS Databanking 24</description>
        <label>ČSAS Heslo (nepouzivat)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_UserName__c</fullName>
        <description>ČSAS Číslo klienta pro přístup k Databanking 24</description>
        <label>ČSAS Číslo klienta (nepouzivat)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__CSAS_WS__c</fullName>
        <description>URL služby ČSAS Databanking 24</description>
        <label>ČSAS WS (nepouzivat)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Client_Id_From_CMDT__c</fullName>
        <formula>$CustomMetadata.CRMforNonProfit__George_Settings__mdt.CRMforNonProfit__Integration_info.CRMforNonProfit__Client_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Id From CMDT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__ContactTransactions__c</fullName>
        <label>Typy transakcí sčítaných na kontaktu</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>peněžní dar</fullName>
                </value>
                <value>
                    <fullName>nepeněžní dar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DefaultAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DefaultAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NNOSettings</relationshipLabel>
        <relationshipName>NNOSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DefaultCampaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DefaultCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NNOSettings</relationshipLabel>
        <relationshipName>NNOSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DefaultContact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DefaultContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NNOSettings</relationshipLabel>
        <relationshipName>NNOSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Default_Transaction_Type__c</fullName>
        <label>Default Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>peněžní dar</fullName>
                </value>
                <value>
                    <fullName>nepeněžní dar</fullName>
                </value>
                <value>
                    <fullName>členský příspěvek</fullName>
                </value>
                <value>
                    <fullName>dotace/grant</fullName>
                </value>
                <value>
                    <fullName>protiplnění</fullName>
                </value>
                <value>
                    <fullName>ostatní</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Disable_Outgoing_Transactions_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Outgoing Transactions Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DoNotCheckCampaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Transactions Check Campaign Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DoNotCheckContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true related transactions will not be checked during contacts deletion</inlineHelpText>
        <label>No Transactions Check Contact Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Enable_Email_Processing_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Executes email processor with random delay (1-10 minutes) to avoid potential record lock issue.</inlineHelpText>
        <label>Enable Email Processing Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Eshopstatus__c</fullName>
        <description>seznamem stavů, které se mají zpracovávat</description>
        <inlineHelpText>seznamem stavů, které se mají zpracovávat</inlineHelpText>
        <label>eshopStatusProcessed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>processing</fullName>
                </value>
                <value>
                    <fullName>on-hold</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                    <default>true</default>
                    <label>completed</label>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
                <value>
                    <fullName>refunded</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
                <value>
                    <fullName>trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__George_Auth_Code__c</fullName>
        <label>George Auth Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__InboundEmailReprocessErrors__c</fullName>
        <description>Error texts delimited by comma, that will be reprocessed by InboundEmailReprocess batch</description>
        <label>Inbound Email Reprocess Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__InboundEmailReprocessOutage__c</fullName>
        <description>Max age (in days) of Inbound email to be reprocessed with InboundEmailReprocess batch</description>
        <label>Inbound email reprocess outage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Last_Transactions_Load_Date__c</fullName>
        <label>Last Transactions Load</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Load_Only_Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Only Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Moneta_API_token__c</fullName>
        <label>Moneta API token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Moneta_Cisla_uctu__c</fullName>
        <description>Čísla účtů (s lomítkem a číslem banky) které se mají zpracovat, oddělená čárkou.</description>
        <inlineHelpText>Čísla účtů (s lomítkem a číslem banky) které se mají zpracovat, oddělená čárkou.</inlineHelpText>
        <label>Moneta Čísla účtů</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Moneta_Last_statement_load__c</fullName>
        <label>Moneta Datum posledního načteného výpisu</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Primary_Account_Number__c</fullName>
        <description>Iban number</description>
        <label>Primary Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Redirect_URI_From_CMDT__c</fullName>
        <formula>$CustomMetadata.CRMforNonProfit__George_Settings__mdt.CRMforNonProfit__Integration_info.CRMforNonProfit__Redirect_URI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redirect URI From CMDT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Refresh_Token_Valid_To__c</fullName>
        <label>Refresh Token Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Reminder_Admin_E_mail_Addresses__c</fullName>
        <description>Comma separated Email adresses for reminder e-mails</description>
        <label>Reminder Admin E-mail Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__SumContactsOnAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>zaškrtněte pokud chcete na firmě sečíst i dary navázaných kontaktů</inlineHelpText>
        <label>Sčítat dary kontaktů na firmě</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_Debet_Transactions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Debet Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transactions_Load_End_Date__c</fullName>
        <label>Transactions Load End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__VS_Generate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pokud je zaškrtnuto dochází k automatickému generování variabilního čísla členů kampaně (4 čísla z variabilního symbolu kampaně + 6 čísel pořadové čísla člena kampaně)</inlineHelpText>
        <label>Generovat VS členů kampaně</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__VS_Length__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>jak dlouhý variabilní symbol se má generovat na členovi kampaně</inlineHelpText>
        <label>Délka VS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NNOSettings</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NNOSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NNOSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>